@@ -96,6 +96,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #25411: Improved Unicode support in SMTPHandler through better use of
+  the email package. Thanks to user simon04 for the patch.
+
 - Issue #25380: Fixed protocol for the STACK_GLOBAL opcode in
   pickletools.opcodes.
 
